# BrightnessControl

./: .gitignore  CMakeLists.txt
glfw/src/: mappings.h
imgui/: CMakeLists.txt
src/: base64.hpp  bin.h  imgui.ini  main.cpp
